bug Fix: passion - altered background gradient for visibility of boundless logo

--- a/passion/css/tiles.dev.css
+++ b/passion/css/tiles.dev.css
@@ -179,13 +179,13 @@ body {
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  background: -webkit-radial-gradient(gba(48, 48, 48, 0.6) 5%, rgba(48, 48, 48, 0) 80%);
+  background: -webkit-radial-gradient(gba(48, 48, 48, 0.4) 5%, rgba(48, 48, 48, 0) 80%);
   /* Safari 5.1-6.0 */
-  background: -o-radial-gradient(gba(48, 48, 48, 0.6) 5%, rgba(48, 48, 48, 0) 80%);
+  background: -o-radial-gradient(gba(48, 48, 48, 0.4) 5%, rgba(48, 48, 48, 0) 80%);
   /* For Opera 11.6-12.0 */
-  background: -moz-radial-gradient(gba(48, 48, 48, 0.6) 5%, rgba(48, 48, 48, 0) 80%);
+  background: -moz-radial-gradient(gba(48, 48, 48, 0.4) 5%, rgba(48, 48, 48, 0) 80%);
   /* For Firefox 3.6-15 */
-  background: radial-gradient(rgba(48, 48, 48, 0.6) 5%, rgba(48, 48, 48, 0) 80%);
+  background: radial-gradient(rgba(48, 48, 48, 0.4) 5%, rgba(48, 48, 48, 0) 80%);
   /* Standard syntax */
 }
 #passion .fyp-button {
@@ -418,7 +418,7 @@ body {
 }
 #passion .module-hero-image .circle-button-container {
   width: 100%;
-  margin: 50px 0 40px 0;
+  margin: 50px 0 4 0;
   display: inline-block;
 }
 #passion .module-hero-image .circle-button-container div.flip-container {
