--- a/passion/less/tiles.less
+++ b/passion/less/tiles.less
@@ -31,10 +31,10 @@
       position: relative;
       margin-left: auto;  
       margin-right: auto;
-      background: -webkit-radial-gradient(gba(48,48,48,0.6) 5%, rgba(48,48,48,0) 80%); /* Safari 5.1-6.0 */
-      background: -o-radial-gradient(gba(48,48,48,0.6) 5%, rgba(48,48,48,0) 80%); /* For Opera 11.6-12.0 */
-      background: -moz-radial-gradient(gba(48,48,48,0.6) 5%, rgba(48,48,48,0) 80%); /* For Firefox 3.6-15 */
-      background: radial-gradient(rgba(48,48,48,0.6) 5%, rgba(48,48,48,0) 80%); /* Standard syntax */
+      background: -webkit-radial-gradient(gba(48,48,48,0.4) 5%, rgba(48,48,48,0) 80%); /* Safari 5.1-6.0 */
+      background: -o-radial-gradient(gba(48,48,48,0.4) 5%, rgba(48,48,48,0) 80%); /* For Opera 11.6-12.0 */
+      background: -moz-radial-gradient(gba(48,48,48,0.4) 5%, rgba(48,48,48,0) 80%); /* For Firefox 3.6-15 */
+      background: radial-gradient(rgba(48,48,48,0.4) 5%, rgba(48,48,48,0) 80%); /* Standard syntax */
     }
   }
 
@@ -283,7 +283,7 @@ button#empty {
       }
       .circle-button-container {
         width: 100%;
-        margin: 50px 0 40px 0;
+        margin: 50px 0 4 0;
         display: inline-block;
         div.flip-container {
           width: 175px;
